--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ ul {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	background: black;
 }
 
 	li {
@@ -14,7 +15,7 @@ ul {
 
 	li a {
 	display: block;
-	color: black;
+	color: white;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
